improve test doce
